kube/cert-manager/certclusterissuerandingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-terraform-registry-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - terraform-reg-gm.uksouth.cloudapp.azure.com # IMPORTANT: update <ingress ip> with the dashed public IP of your ingress, for example frontend.13-68-177-68.nip.io
      secretName: simple-terraform-registry-cert
  rules:
  - host: terraform-reg-gm.uksouth.cloudapp.azure.com # IMPORTANT: update <ingress ip> with the dashed public IP of your ingress, for example frontend.13-68-177-68.nip.io
    http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: simple-terraform-registry
              port:
                name: http
